[gd_scene load_steps=25 format=3 uid="uid://ugyh40oi5h53"]

[ext_resource type="Texture2D" uid="uid://bt0mhgh8senec" path="res://sprites/Enemigo1.png" id="1_i6q5m"]
[ext_resource type="Script" path="res://inimigo.gd" id="1_yyyl5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6r255"]
atlas = ExtResource("1_i6q5m")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxvss"]
atlas = ExtResource("1_i6q5m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6j8p"]
atlas = ExtResource("1_i6q5m")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oufct"]
atlas = ExtResource("1_i6q5m")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dda1"]
atlas = ExtResource("1_i6q5m")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8p4o"]
atlas = ExtResource("1_i6q5m")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjn2i"]
atlas = ExtResource("1_i6q5m")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x12a3"]
atlas = ExtResource("1_i6q5m")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tte15"]
atlas = ExtResource("1_i6q5m")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_recvm"]
atlas = ExtResource("1_i6q5m")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_676qf"]
atlas = ExtResource("1_i6q5m")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqc6p"]
atlas = ExtResource("1_i6q5m")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mslaa"]
atlas = ExtResource("1_i6q5m")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2q20"]
atlas = ExtResource("1_i6q5m")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qayq4"]
atlas = ExtResource("1_i6q5m")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpfo3"]
atlas = ExtResource("1_i6q5m")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l73d8"]
atlas = ExtResource("1_i6q5m")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jnsn"]
atlas = ExtResource("1_i6q5m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qwn3c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r255")
}],
"loop": false,
"name": &"MORTE",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxvss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6j8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oufct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dda1")
}],
"loop": true,
"name": &"andandoBaixo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8p4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjn2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x12a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tte15")
}],
"loop": true,
"name": &"andandoCima",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_recvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_676qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqc6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mslaa")
}],
"loop": true,
"name": &"andandoDireita",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2q20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qayq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpfo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l73d8")
}],
"loop": true,
"name": &"andandoEsquerda",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jnsn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rarc"]
size = Vector2(14, 15.9412)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j537b"]
size = Vector2(379.118, 209.412)

[sub_resource type="CircleShape2D" id="CircleShape2D_bl83h"]
radius = 16.8059

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(3.4, 3.4)
collision_mask = 3
script = ExtResource("1_yyyl5")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qwn3c")
animation = &"MORTE"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.0294119)
shape = SubResource("RectangleShape2D_0rarc")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-9.53674e-07, 0)
shape = SubResource("RectangleShape2D_j537b")
debug_color = Color(1, 0, 0.101961, 0.309804)

[node name="CausarDano" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CausarDano"]
shape = SubResource("CircleShape2D_bl83h")
debug_color = Color(0.762982, 0.720864, 0.686647, 0.42)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="CausarDano" to="." method="_on_causar_dano_body_entered"]
